--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
             <i class="fas fa-volume-mute"></i>
           </button>
           <select name="snare-select" id="snare-select">
-            <option value="./sounds/snare-acoustic01.wav">Classic Snare</option>
-            <option value="./sounds/snare-808.wav">808 Snare</option>
             <option value="./sounds/snare-vinyl02.wav">Snare Vinyl</option>
+            <option value="./sounds/snare-808.wav">808 Snare</option>
+            <option value="./sounds/snare-acoustic01.wav">
+              Acoustic Snare
+            </option>
           </select>
         </div>
         <div class="snare">
@@ -61,8 +63,8 @@
             <i class="fas fa-volume-mute"></i>
           </button>
           <select name="hihat-select" id="hihat-select">
-            <option value="./sounds/hihat-acoustic01.wav">Classic Hihat</option>
             <option value="./sounds/hihat-808.wav">808 Hihat</option>
+            <option value="./sounds/hihat-acoustic01.wav">Classic Hihat</option>
             <option value="./sounds/hihat-electro.wav">Hihat Electro</option>
           </select>
         </div>
@@ -78,10 +80,20 @@
         </div>
       </div>
       <button class="play">Play</button>
+      <div class="tempo">
+        <input
+          type="range"
+          class="tempo-slider"
+          max="400"
+          min="100"
+          value="250"
+        />
+        <p>Tempo: <span class="tempo-nr">250</span></p>
+      </div>
     </div>
     <audio src="./sounds/kick-classic.wav" class="kick-sound"></audio>
-    <audio src="./sounds/snare-acoustic01.wav" class="snare-sound"></audio>
-    <audio src="./sounds/hihat-acoustic01.wav" class="hihat-sound"></audio>
+    <audio src="./sounds/snare-vinyl02.wav" class="snare-sound"></audio>
+    <audio src="./sounds/hihat-808.wav" class="hihat-sound"></audio>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"
